--- a/index.html
+++ b/index.html
@@ -50,6 +50,10 @@
       ::-webkit-scrollbar-thumb:hover {
         background: #64748b;
       }
+      pre {
+        white-space: pre-wrap;
+        word-wrap: break-word;
+      }
     </style>
   <script type="importmap">
 {
